// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`effective permissions across every production combination admin + client (6 rows) 1`] = `
{
  "access.chat": true,
  "access.delivery": true,
  "access.project_settings": true,
  "access.resources": true,
  "access.roadmap": true,
  "access.team": true,
  "access.time": true,
  "access.work_items": true,
  "change_requests.create": true,
  "change_requests.decide": true,
  "chat.create_channels": true,
  "chat.manage_channels": true,
  "chat.mention_members": true,
  "chat.send_dm": true,
  "chat.send_messages": true,
  "chat.share_files": true,
  "chat.start_dm": true,
  "chat.view_channels": true,
  "chat.view_internal_channels": true,
  "decisions.edit": true,
  "decisions.view_internal": true,
  "deliverables.approve": true,
  "deliverables.edit": true,
  "logs.view": true,
  "logs.view_sensitive": true,
  "members.edit_permissions": true,
  "members.edit_position": true,
  "members.manage": true,
  "members.view": true,
  "project.edit_content": true,
  "project.settings": true,
  "project.view_internal_content": true,
  "resources.delete": true,
  "resources.upload": true,
  "resources.view": true,
  "risks.edit": true,
  "risks.view_internal": true,
  "roadmap.assign": true,
  "roadmap.comment": true,
  "roadmap.create_tasks": true,
  "roadmap.dev_mode": true,
  "roadmap.edit": true,
  "roadmap.edit_metadata": true,
  "roadmap.edit_tasks": true,
  "roadmap.export": true,
  "roadmap.promote": true,
  "roadmap.share": true,
  "roadmap.view": true,
  "roadmap.view_internal": true,
  "teams.manage": true,
  "teams.view": true,
  "time.view_team_logs": true,
}
`;

exports[`effective permissions across every production combination admin + team-derived (10 rows) 1`] = `
{
  "access.chat": true,
  "access.delivery": true,
  "access.project_settings": true,
  "access.resources": true,
  "access.roadmap": true,
  "access.team": true,
  "access.time": true,
  "access.work_items": true,
  "change_requests.create": true,
  "change_requests.decide": true,
  "chat.create_channels": true,
  "chat.manage_channels": true,
  "chat.mention_members": true,
  "chat.send_dm": true,
  "chat.send_messages": true,
  "chat.share_files": true,
  "chat.start_dm": true,
  "chat.view_channels": true,
  "chat.view_internal_channels": true,
  "decisions.edit": true,
  "decisions.view_internal": true,
  "deliverables.approve": true,
  "deliverables.edit": true,
  "logs.view": true,
  "logs.view_sensitive": true,
  "members.edit_permissions": true,
  "members.edit_position": true,
  "members.manage": true,
  "members.view": true,
  "project.edit_content": true,
  "project.settings": true,
  "project.view_internal_content": true,
  "resources.delete": true,
  "resources.upload": true,
  "resources.view": true,
  "risks.edit": true,
  "risks.view_internal": true,
  "roadmap.assign": true,
  "roadmap.comment": true,
  "roadmap.create_tasks": true,
  "roadmap.dev_mode": true,
  "roadmap.edit": true,
  "roadmap.edit_metadata": true,
  "roadmap.edit_tasks": true,
  "roadmap.export": true,
  "roadmap.promote": true,
  "roadmap.share": true,
  "roadmap.view": true,
  "roadmap.view_internal": true,
  "teams.manage": true,
  "teams.view": true,
  "time.view_team_logs": true,
}
`;

exports[`effective permissions across every production combination editor + invited (7 rows) 1`] = `
{
  "access.chat": true,
  "access.delivery": true,
  "access.project_settings": false,
  "access.resources": true,
  "access.roadmap": true,
  "access.team": true,
  "access.time": true,
  "access.work_items": true,
  "change_requests.create": true,
  "change_requests.decide": false,
  "chat.create_channels": false,
  "chat.manage_channels": false,
  "chat.mention_members": true,
  "chat.send_dm": true,
  "chat.send_messages": true,
  "chat.share_files": true,
  "chat.start_dm": true,
  "chat.view_channels": true,
  "chat.view_internal_channels": false,
  "decisions.edit": true,
  "decisions.view_internal": false,
  "deliverables.approve": false,
  "deliverables.edit": true,
  "logs.view": true,
  "logs.view_sensitive": false,
  "members.edit_permissions": false,
  "members.edit_position": false,
  "members.manage": false,
  "members.view": true,
  "project.edit_content": false,
  "project.settings": false,
  "project.view_internal_content": false,
  "resources.delete": false,
  "resources.upload": true,
  "resources.view": true,
  "risks.edit": true,
  "risks.view_internal": false,
  "roadmap.assign": true,
  "roadmap.comment": true,
  "roadmap.create_tasks": true,
  "roadmap.dev_mode": false,
  "roadmap.edit": true,
  "roadmap.edit_metadata": true,
  "roadmap.edit_tasks": true,
  "roadmap.export": true,
  "roadmap.promote": false,
  "roadmap.share": true,
  "roadmap.view": true,
  "roadmap.view_internal": false,
  "teams.manage": false,
  "teams.view": true,
  "time.view_team_logs": false,
}
`;

exports[`effective permissions across every production combination editor + team-derived (53 rows) 1`] = `
{
  "access.chat": true,
  "access.delivery": true,
  "access.project_settings": false,
  "access.resources": true,
  "access.roadmap": true,
  "access.team": true,
  "access.time": true,
  "access.work_items": true,
  "change_requests.create": true,
  "change_requests.decide": false,
  "chat.create_channels": false,
  "chat.manage_channels": false,
  "chat.mention_members": true,
  "chat.send_dm": true,
  "chat.send_messages": true,
  "chat.share_files": true,
  "chat.start_dm": true,
  "chat.view_channels": true,
  "chat.view_internal_channels": false,
  "decisions.edit": true,
  "decisions.view_internal": false,
  "deliverables.approve": false,
  "deliverables.edit": true,
  "logs.view": true,
  "logs.view_sensitive": false,
  "members.edit_permissions": false,
  "members.edit_position": false,
  "members.manage": false,
  "members.view": true,
  "project.edit_content": false,
  "project.settings": false,
  "project.view_internal_content": false,
  "resources.delete": false,
  "resources.upload": true,
  "resources.view": true,
  "risks.edit": true,
  "risks.view_internal": false,
  "roadmap.assign": true,
  "roadmap.comment": true,
  "roadmap.create_tasks": true,
  "roadmap.dev_mode": false,
  "roadmap.edit": true,
  "roadmap.edit_metadata": true,
  "roadmap.edit_tasks": true,
  "roadmap.export": true,
  "roadmap.promote": false,
  "roadmap.share": true,
  "roadmap.view": true,
  "roadmap.view_internal": false,
  "teams.manage": false,
  "teams.view": true,
  "time.view_team_logs": false,
}
`;

exports[`effective permissions across every production combination editor + team-derived, elevated by capabilities (A) (1 rows) 1`] = `
{
  "access.chat": true,
  "access.delivery": true,
  "access.project_settings": true,
  "access.resources": true,
  "access.roadmap": true,
  "access.team": true,
  "access.time": true,
  "access.work_items": true,
  "change_requests.create": true,
  "change_requests.decide": false,
  "chat.create_channels": true,
  "chat.manage_channels": true,
  "chat.mention_members": true,
  "chat.send_dm": true,
  "chat.send_messages": true,
  "chat.share_files": true,
  "chat.start_dm": true,
  "chat.view_channels": true,
  "chat.view_internal_channels": true,
  "decisions.edit": true,
  "decisions.view_internal": false,
  "deliverables.approve": false,
  "deliverables.edit": true,
  "logs.view": true,
  "logs.view_sensitive": true,
  "members.edit_permissions": true,
  "members.edit_position": true,
  "members.manage": true,
  "members.view": true,
  "project.edit_content": true,
  "project.settings": true,
  "project.view_internal_content": true,
  "resources.delete": true,
  "resources.upload": true,
  "resources.view": true,
  "risks.edit": true,
  "risks.view_internal": false,
  "roadmap.assign": true,
  "roadmap.comment": true,
  "roadmap.create_tasks": true,
  "roadmap.dev_mode": true,
  "roadmap.edit": true,
  "roadmap.edit_metadata": true,
  "roadmap.edit_tasks": true,
  "roadmap.export": true,
  "roadmap.promote": true,
  "roadmap.share": true,
  "roadmap.view": true,
  "roadmap.view_internal": true,
  "teams.manage": false,
  "teams.view": false,
  "time.view_team_logs": false,
}
`;

exports[`effective permissions across every production combination editor + team-derived, elevated by capabilities (B) (1 rows) 1`] = `
{
  "access.chat": true,
  "access.delivery": true,
  "access.project_settings": true,
  "access.resources": true,
  "access.roadmap": true,
  "access.team": true,
  "access.time": true,
  "access.work_items": true,
  "change_requests.create": true,
  "change_requests.decide": false,
  "chat.create_channels": true,
  "chat.manage_channels": true,
  "chat.mention_members": true,
  "chat.send_dm": true,
  "chat.send_messages": true,
  "chat.share_files": true,
  "chat.start_dm": true,
  "chat.view_channels": true,
  "chat.view_internal_channels": true,
  "decisions.edit": true,
  "decisions.view_internal": false,
  "deliverables.approve": false,
  "deliverables.edit": true,
  "logs.view": true,
  "logs.view_sensitive": true,
  "members.edit_permissions": true,
  "members.edit_position": true,
  "members.manage": true,
  "members.view": true,
  "project.edit_content": true,
  "project.settings": true,
  "project.view_internal_content": true,
  "resources.delete": true,
  "resources.upload": true,
  "resources.view": true,
  "risks.edit": true,
  "risks.view_internal": false,
  "roadmap.assign": true,
  "roadmap.comment": true,
  "roadmap.create_tasks": true,
  "roadmap.dev_mode": true,
  "roadmap.edit": true,
  "roadmap.edit_metadata": true,
  "roadmap.edit_tasks": true,
  "roadmap.export": true,
  "roadmap.promote": true,
  "roadmap.share": true,
  "roadmap.view": true,
  "roadmap.view_internal": true,
  "teams.manage": true,
  "teams.view": true,
  "time.view_team_logs": true,
}
`;

exports[`effective permissions across every production combination owner + consultant (17 rows) 1`] = `
{
  "access.chat": true,
  "access.delivery": true,
  "access.project_settings": true,
  "access.resources": true,
  "access.roadmap": true,
  "access.team": true,
  "access.time": true,
  "access.work_items": true,
  "change_requests.create": true,
  "change_requests.decide": true,
  "chat.create_channels": true,
  "chat.manage_channels": true,
  "chat.mention_members": true,
  "chat.send_dm": true,
  "chat.send_messages": true,
  "chat.share_files": true,
  "chat.start_dm": true,
  "chat.view_channels": true,
  "chat.view_internal_channels": true,
  "decisions.edit": true,
  "decisions.view_internal": true,
  "deliverables.approve": true,
  "deliverables.edit": true,
  "logs.view": true,
  "logs.view_sensitive": true,
  "members.edit_permissions": true,
  "members.edit_position": true,
  "members.manage": true,
  "members.view": true,
  "project.edit_content": true,
  "project.settings": true,
  "project.view_internal_content": true,
  "resources.delete": true,
  "resources.upload": true,
  "resources.view": true,
  "risks.edit": true,
  "risks.view_internal": true,
  "roadmap.assign": true,
  "roadmap.comment": true,
  "roadmap.create_tasks": true,
  "roadmap.dev_mode": true,
  "roadmap.edit": true,
  "roadmap.edit_metadata": true,
  "roadmap.edit_tasks": true,
  "roadmap.export": true,
  "roadmap.promote": true,
  "roadmap.share": true,
  "roadmap.view": true,
  "roadmap.view_internal": true,
  "teams.manage": true,
  "teams.view": true,
  "time.view_team_logs": true,
}
`;

exports[`effective permissions across every production combination owner + personal_workspace (12 rows) 1`] = `
{
  "access.chat": true,
  "access.delivery": true,
  "access.project_settings": true,
  "access.resources": true,
  "access.roadmap": true,
  "access.team": true,
  "access.time": true,
  "access.work_items": true,
  "change_requests.create": true,
  "change_requests.decide": true,
  "chat.create_channels": true,
  "chat.manage_channels": true,
  "chat.mention_members": true,
  "chat.send_dm": true,
  "chat.send_messages": true,
  "chat.share_files": true,
  "chat.start_dm": true,
  "chat.view_channels": true,
  "chat.view_internal_channels": true,
  "decisions.edit": true,
  "decisions.view_internal": true,
  "deliverables.approve": true,
  "deliverables.edit": true,
  "logs.view": true,
  "logs.view_sensitive": true,
  "members.edit_permissions": true,
  "members.edit_position": true,
  "members.manage": true,
  "members.view": true,
  "project.edit_content": true,
  "project.settings": true,
  "project.view_internal_content": true,
  "resources.delete": true,
  "resources.upload": true,
  "resources.view": true,
  "risks.edit": true,
  "risks.view_internal": true,
  "roadmap.assign": true,
  "roadmap.comment": true,
  "roadmap.create_tasks": true,
  "roadmap.dev_mode": true,
  "roadmap.edit": true,
  "roadmap.edit_metadata": true,
  "roadmap.edit_tasks": true,
  "roadmap.export": true,
  "roadmap.promote": true,
  "roadmap.share": true,
  "roadmap.view": true,
  "roadmap.view_internal": true,
  "teams.manage": true,
  "teams.view": true,
  "time.view_team_logs": true,
}
`;
